--- a/dharma/index.html
+++ b/dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>dharma | Reversed Siddhartha</title>
 <meta name="title" content="dharma" />
 <meta name="description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
@@ -25,7 +25,7 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) (from this post)" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://ahtrahddis.eu/dharma/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -33,7 +33,7 @@
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="dharma"/>
 <meta name="twitter:description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
@@ -53,7 +53,7 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) (from this post)">
 
-<meta itemprop="wordCount" content="436"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="436"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -289,7 +289,7 @@
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">these freely downloadable texts</a> with his teachings.</p>
 <p> </p>
 <h3 id="do-you-want-to-know-about-pragmatic-dharma">Do you want to know about &ldquo;Pragmatic Dharma&rdquo;?</h3>
-<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
+<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.eu/pragmatic-dharma/">this link</a>.</p>
 
 </content>
 <p>
