--- a/info/index.html
+++ b/info/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>info | Reversed Siddhartha</title>
 <meta name="title" content="info" />
 <meta name="description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
@@ -25,7 +25,7 @@ My current practice is heavily influenced by:
   Sayadaw U Tejaniya
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/info/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://ahtrahddis.eu/info/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -33,7 +33,7 @@ My current practice is heavily influenced by:
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Info Who Am I? It really doesn&rsquo;t matter at all who I am, but let me give you some context.
@@ -53,7 +53,7 @@ My current practice is heavily influenced by:
   Sayadaw U Tejaniya
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)">
 
-<meta itemprop="wordCount" content="190"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="190"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -255,7 +255,7 @@ My current practice is heavily influenced by:
 <p>Recently, I gained interest in <a href="https://suttacentral.net/">Early Buddhist Texts</a>, not as a means to follow the &ldquo;real path&rdquo; or whatever. I just lost interest in &ldquo;Buddhist psychology&rdquo; books and became curious to learn from the most accurate source, what probably Siddhartha Gautama taught.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
-<p>If you found a typo or an issue with formatting etc., please consider opening an issue ticket on the relevant repository on my <a href="https://github.com/ahtrahddis?tab=repositories">Github page</a>. You can also fork my repo, make the proposed change and push back to me.</p>
+<p>If you found a typo or an issue with formatting etc., please consider opening an issue ticket on the relevant repository on my <a href="https://github.com/ahtrahddis?tab=repositories">Github page</a>. You can also fork my repo, make the proposed change and submit a pull request.</p>
 <p>For any other inquiry, please open a ticket <a href="https://github.com/ahtrahddis/ahtrahddis.github.io/issues">here</a>.</p>
 <p> </p>
 <h2 id="website">Website</h2>
