--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>The Core Features of Pragmatic Dharma | Reversed Siddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
 <meta name="description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
@@ -19,7 +19,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="texts" />
+<meta property="og:url" content="https://ahtrahddis.eu/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="texts" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -27,7 +27,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="The Core Features of Pragmatic Dharma"/>
 <meta name="twitter:description" content="The Core Features of Pragmatic Dharma This is an article by Vince Horn.
@@ -41,7 +41,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished.">
 
-<meta itemprop="wordCount" content="1729"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="1729"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
