--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
@@ -15,13 +15,13 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ahtrahddis.github.io/404.html" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+<meta property="og:url" content="https://ahtrahddis.eu/404.html" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Reversed Siddhartha - a repository of dharma e-books and more.."/>
