--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>welcome | Reversed Siddhartha</title>
 <meta name="title" content="welcome" />
 <meta name="description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
@@ -16,13 +16,13 @@
 <meta property="og:title" content="welcome" />
 <meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ahtrahddis.github.io/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+<meta property="og:url" content="https://ahtrahddis.eu/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="welcome"/>
 <meta name="twitter:description" content="Reversed Siddhartha - a repository of dharma e-books and more.."/>
@@ -33,7 +33,7 @@
 <meta itemprop="description" content="Reversed Siddhartha - a repository of dharma e-books and more..">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/index.xml" title="Reversed Siddhartha" />
+  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.eu/index.xml" title="Reversed Siddhartha" />
   <style>
  
 
