--- a/links/index.html
+++ b/links/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>useful links | Reversed Siddhartha</title>
 <meta name="title" content="useful links" />
 <meta name="description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
@@ -35,7 +35,7 @@
   r/awakeawareness
    Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/links/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://ahtrahddis.eu/links/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -43,7 +43,7 @@
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="useful links"/>
 <meta name="twitter:description" content="Useful Links Early Buddhism   In the Buddha’s Words (open source edition)
@@ -73,7 +73,7 @@
   r/awakeawareness
    Online Books  Mindfulness in Plain English by Ven. Henepola Gunaratana   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts  Zen Studies   Various  Meditator-X (MettaJunkie&rsquo;s blog)  ">
 
-<meta itemprop="wordCount" content="54"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="54"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
