--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>pragmatic dharma | Reversed Siddhartha</title>
 <meta name="title" content="pragmatic dharma" />
 <meta name="description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
@@ -23,7 +23,7 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://ahtrahddis.eu/pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -31,7 +31,7 @@
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="pragmatic dharma"/>
 <meta name="twitter:description" content="What is Pragmatic Dharma?   What is Pragmatic Dharma? by Ron Crouch
@@ -49,7 +49,7 @@
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
  &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
-<meta itemprop="wordCount" content="468"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="468"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -231,13 +231,13 @@
   <h2 id="what-is-pragmatic-dharma">What is Pragmatic Dharma?</h2>
 <ul>
 <li>
-<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></p>
+<p><a href="https://ahtrahddis.eu/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></p>
 </li>
 <li>
-<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by <a href="http://www.vincehorn.space/">Vince Horn</a></p>
+<p><a href="https://ahtrahddis.eu/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by <a href="http://www.vincehorn.space/">Vince Horn</a></p>
 </li>
 </ul>
-<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.github.io/#pragmatic-dharma">the main page of this website</a>.</p>
+<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.eu/#pragmatic-dharma">the main page of this website</a>.</p>
 <p> </p>
 <h2 id="what-about-the-mushroom-culture">What about the &ldquo;mushroom culture&rdquo;?</h2>
 <p>Here&rsquo;s a short story shared by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a> via <a href="https://twitter.com/kennethfolk">his twitter account</a>:</p>
