--- a/texts/index.html
+++ b/texts/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>Texts | Reversed Siddhartha</title>
 <meta name="title" content="Texts" />
 <meta name="description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
@@ -15,13 +15,13 @@
 <meta property="og:title" content="Texts" />
 <meta property="og:description" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ahtrahddis.github.io/texts/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
+<meta property="og:url" content="https://ahtrahddis.eu/texts/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="Texts"/>
 <meta name="twitter:description" content="Reversed Siddhartha - a repository of dharma e-books and more.."/>
@@ -32,7 +32,7 @@
 <meta itemprop="description" content="Reversed Siddhartha - a repository of dharma e-books and more..">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/texts/index.xml" title="Reversed Siddhartha" />
+  <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.eu/texts/index.xml" title="Reversed Siddhartha" />
   <style>
  
 
@@ -237,7 +237,7 @@
           </time>
         </i>
       </span>
-      <a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a>
+      <a href="https://ahtrahddis.eu/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a>
     </li>
     
     <li>
@@ -248,7 +248,7 @@
           </time>
         </i>
       </span>
-      <a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a>
+      <a href="https://ahtrahddis.eu/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a>
     </li>
     
   </ul>
