--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
-<link rel="shortcut icon" href="https://ahtrahddis.github.io/favicon.png" />
+<link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>What is Pragmatic Dharma? | Reversed Siddhartha</title>
 <meta name="title" content="What is Pragmatic Dharma?" />
 <meta name="description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
@@ -17,7 +17,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta property="og:description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.github.io/rs.png"/><meta property="article:section" content="texts" />
+<meta property="og:url" content="https://ahtrahddis.eu/texts/pragmatic-dharma/what-is-pragmatic-dharma/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="texts" />
 
 <meta property="og:site_name" content="Reversed Siddhartha - a repository of dharma e-books and more.." />
 
@@ -25,7 +25,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="What is Pragmatic Dharma?"/>
 <meta name="twitter:description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
@@ -37,7 +37,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta itemprop="description" content="What is Pragmatic Dharma? This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism.">
 
-<meta itemprop="wordCount" content="2152"><meta itemprop="image" content="https://ahtrahddis.github.io/rs.png"/>
+<meta itemprop="wordCount" content="2152"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
