--- a/info/index.html
+++ b/info/index.html
@@ -53,7 +53,7 @@ My current practice is heavily influenced by:
   Sayadaw U Tejaniya
   Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)">
 
-<meta itemprop="wordCount" content="190"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
+<meta itemprop="wordCount" content="183"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -252,7 +252,7 @@ My current practice is heavily influenced by:
 <p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
 </li>
 </ul>
-<p>Recently, I gained interest in <a href="https://suttacentral.net/">Early Buddhist Texts</a>, not as a means to follow the &ldquo;real path&rdquo; or whatever. I just lost interest in &ldquo;Buddhist psychology&rdquo; books and became curious to learn from the most accurate source, what probably Siddhartha Gautama taught.</p>
+<p>Recently, I gained interest in <a href="https://suttacentral.net/">Early Buddhist Texts</a>, not as a means to follow the &ldquo;real path&rdquo; or whatever. I just became curious to learn from the most accurate source, what probably Siddhartha Gautama taught.</p>
 <p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you found a typo or an issue with formatting etc., please consider opening an issue ticket on the relevant repository on my <a href="https://github.com/ahtrahddis?tab=repositories">Github page</a>. You can also fork my repo, make the proposed change and submit a pull request.</p>
