--- a/dharma/index.html
+++ b/dharma/index.html
@@ -8,22 +8,22 @@
 <link rel="shortcut icon" href="https://ahtrahddis.eu/favicon.png" />
 <title>dharma | Reversed Siddhartha</title>
 <meta name="title" content="dharma" />
-<meta name="description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta name="description" content="Dharma Practice This is just a short practice-oriented guide, aimed to assist beginners in meditation.
+Instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
-  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
-  Metta (Loving Kindness) (from this post)" />
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="dharma" />
-<meta property="og:description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta property="og:description" content="Dharma Practice This is just a short practice-oriented guide, aimed to assist beginners in meditation.
+Instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
-  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
-  Metta (Loving Kindness) (from this post)" />
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.eu/dharma/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
@@ -36,24 +36,24 @@
 <meta name="twitter:image" content="https://ahtrahddis.eu/rs.png"/>
 
 <meta name="twitter:title" content="dharma"/>
-<meta name="twitter:description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta name="twitter:description" content="Dharma Practice This is just a short practice-oriented guide, aimed to assist beginners in meditation.
+Instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
-  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
-  Metta (Loving Kindness) (from this post)"/>
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)"/>
 
 
 
 <meta itemprop="name" content="dharma">
-<meta itemprop="description" content="Dharma Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
+<meta itemprop="description" content="Dharma Practice This is just a short practice-oriented guide, aimed to assist beginners in meditation.
+Instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
-  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
-  Metta (Loving Kindness) (from this post)">
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)">
 
-<meta itemprop="wordCount" content="436"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
+<meta itemprop="wordCount" content="388"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -234,7 +234,8 @@
 <content>
   <h1 id="dharma">Dharma</h1>
 <h2 id="practice">Practice</h2>
-<h3 id="meditation-instructions-for-beginners">Meditation instructions for beginners</h3>
+<p>This is just a short practice-oriented guide, aimed to assist beginners in meditation.</p>
+<h3 id="instructions-for-beginners">Instructions for beginners</h3>
 <p><a href="/downloads/mip.zip">Here</a>, you will get a compressed file that includes instructions <strong>in pdf</strong> for the following meditation techniques:</p>
 <ul>
 <li>
@@ -269,27 +270,11 @@
 </ol>
 <p>The whole point of this method is to learn (over time!) how to gently center the mind around awareness of the breath and to sensitize the mind to &ldquo;waking up&rdquo; from distraction. Of course the mind has a mind of its own, so to speak, so you don&rsquo;t force this to happen. You&rsquo;re more like a parent watching a toddler learn to walk. The mind &ldquo;learns to walk&rdquo; on its own. And if you rush it or get angry or frustrated, you&rsquo;re just freaking out the baby!  Although this sounds like a simple practice, it puts you directly in touch with mindfulness and it greatly increases awareness &ndash; don&rsquo;t underestimate it!</p>
 </blockquote>
-<p> </p>
-<h3 id="are-you-interested-in-noting">Are you interested in noting?</h3>
-<p>If you have decided to go with noting (which actually is nothing more than <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s famous Vipassana</a> technique), apart from the introductory text included in the above pack, you can also read the following material:</p>
-<ul>
-<li>
-<p><a href="https://mahasivipassana.com/docs/practical-vipassana-meditation-exercises/">Practical Vipassana Meditation Exercises</a></p>
-</li>
-<li>
-<p><a href="https://mahasivipassana.com/docs/practical-insight-meditation-basic-practice/">Practical Insight Meditation: Basic Practice</a></p>
-</li>
-</ul>
-<p>You can also have a look at this contemporary noting technique by <a href="https://kennethfolkdharma.com">Kenneth Folk</a>:</p>
-<ul>
-<li><a href="https://mahasivipassana.com/contemporary-noting/#kenneth-folks-detailed-freestyle-noting">Kenneth Folk&rsquo;s Freestyle Noting</a></li>
-</ul>
-<p> </p>
-<h3 id="are-you-interested-in-all-day-practice">Are you interested in all-day practice?</h3>
-<p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">these freely downloadable texts</a> with his teachings.</p>
+<p>In addition to the above instructions, you can also try <a href="/downloads/mip.zip">these short guided meditations</a>.</p>
 <p> </p>
 <h3 id="do-you-want-to-know-about-pragmatic-dharma">Do you want to know about &ldquo;Pragmatic Dharma&rdquo;?</h3>
-<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.eu/pragmatic-dharma/">this link</a>.</p>
+<p>Most probably, you visited this website in order to get one of the offered pragmatic Dharma e-books.</p>
+<p>So, in case you want to get more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.eu/pragmatic-dharma/">this link</a>.</p>
 
 </content>
 <p>
