--- a/info/index.html
+++ b/info/index.html
@@ -13,7 +13,7 @@ I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)" />
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages) and Chan (Sheng Yen lineage)" />
 <meta name="keywords" content="" />
 
 
@@ -23,7 +23,7 @@ I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)" />
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages) and Chan (Sheng Yen lineage)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.eu/info/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
@@ -41,7 +41,7 @@ I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)"/>
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages) and Chan (Sheng Yen lineage)"/>
 
 
 
@@ -51,9 +51,9 @@ I&rsquo;m a secular Buddhist and an amateur photographer.
 I used to be a pragmatic Mahasi noting geek, obsessed with the Progress of Insight map, until I decided to stop chasing my tail.
 My current practice is heavily influenced by:
   Sayadaw U Tejaniya
-  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages)">
+  Soto Zen (mainly Kōdō Sawaki and Gudo Wafu Nishijima lineages) and Chan (Sheng Yen lineage)">
 
-<meta itemprop="wordCount" content="183"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
+<meta itemprop="wordCount" content="184"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -243,10 +243,7 @@ My current practice is heavily influenced by:
 <p><a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a></p>
 </li>
 <li>
-<p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a> lineages)</p>
-</li>
-<li>
-<p>Chan (<a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a> lineage)</p>
+<p><a href="https://www.sotozen.com/eng">Soto Zen</a> (mainly <a href="https://en.wikipedia.org/wiki/K%C5%8Dd%C5%8D_Sawaki">Kōdō Sawaki</a> and <a href="https://en.wikipedia.org/wiki/Gud%C5%8D_Wafu_Nishijima">Gudo Wafu Nishijima</a> lineages) and Chan (<a href="https://en.wikipedia.org/wiki/Sheng-yen">Sheng Yen</a> lineage)</p>
 </li>
 <li>
 <p>various secular non-dual teachers (<a href="https://lochkelly.org">Loch Kelly</a>, <a href="https://www.stephanbodian.org/">Stephan Bodian</a>, <a href="https://dianawinston.com">Diana Winston</a>, <a href="https://www.headless.org/contact/richard-lang.htm">Richard Lang</a>, etc.)</p>
