minor text changes

--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -9,19 +9,21 @@
 <title>e-book creation how-to | Reversed Siddhartha</title>
 <meta name="title" content="e-book creation how-to" />
 <meta name="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
+  the text formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
   the epub file is edited with calibre and finally&hellip;
-  the epub file is converted to mobi and azw3 with calibre" />
+  the epub file is converted to mobi and azw3 with calibre
+  for azw3 files, additional soft hyphenation is applied using hyphenate this!" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="e-book creation how-to" />
 <meta property="og:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
+  the text formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
   the epub file is edited with calibre and finally&hellip;
-  the epub file is converted to mobi and azw3 with calibre" />
+  the epub file is converted to mobi and azw3 with calibre
+  for azw3 files, additional soft hyphenation is applied using hyphenate this!" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.eu/e-book-how-to/" /><meta property="og:image" content="https://ahtrahddis.eu/rs.png"/><meta property="article:section" content="" />
 
@@ -35,21 +37,23 @@
 
 <meta name="twitter:title" content="e-book creation how-to"/>
 <meta name="twitter:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
+  the text formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
   the epub file is edited with calibre and finally&hellip;
-  the epub file is converted to mobi and azw3 with calibre"/>
+  the epub file is converted to mobi and azw3 with calibre
+  for azw3 files, additional soft hyphenation is applied using hyphenate this!"/>
 
 
 
 <meta itemprop="name" content="e-book creation how-to">
 <meta itemprop="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
+  the text formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
   the epub file is edited with calibre and finally&hellip;
-  the epub file is converted to mobi and azw3 with calibre">
+  the epub file is converted to mobi and azw3 with calibre
+  for azw3 files, additional soft hyphenation is applied using hyphenate this!">
 
-<meta itemprop="wordCount" content="135"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
+<meta itemprop="wordCount" content="132"><meta itemprop="image" content="https://ahtrahddis.eu/rs.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -232,7 +236,7 @@
 <p>For the creation of all these e-books, the following procedure is followed:</p>
 <ul>
 <li>
-<p>the text is pasted &amp; formatted with / written in / converted to <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a> (and very rarely to html)</p>
+<p>the text formatted with / written in / converted to <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a> (and very rarely to html)</p>
 </li>
 <li>
 <p>the markdown (<strong>.md</strong>) file is converted to <strong>epub</strong> using <a href="https://pandoc.org/">pandoc</a></p>
@@ -244,7 +248,7 @@
 <p>the <strong>epub</strong> file is converted to <strong>mobi</strong> and <strong>azw3</strong> with <a href="https://calibre-ebook.com/">calibre</a></p>
 </li>
 <li>
-<p>for <strong>azw3</strong> files, additional soft hyphenation is added using <a href="https://www.mobileread.com/forums/showthread.php?t=208534">hyphenate this!</a> calibre plugin</p>
+<p>for <strong>azw3</strong> files, additional soft hyphenation is applied using <a href="https://www.mobileread.com/forums/showthread.php?t=208534">hyphenate this!</a> calibre plugin</p>
 </li>
 </ul>
 <p>Note, that for some texts, <strong>pdf</strong> files are provided too. These ones have either been created:</p>
